[gd_scene load_steps=5 format=3 uid="uid://box6tl4h5wf3d"]

[ext_resource type="Script" uid="uid://ccq3yp5o1u521" path="res://BrainVisualizer/UI/Windows/AddToRegion/WindowAddToRegion.gd" id="1_mvyuv"]
[ext_resource type="PackedScene" uid="uid://c10sw6pgpfy48" path="res://BrainVisualizer/UI/GenericElements/TitleBar/TitleBar.tscn" id="2_qajk0"]
[ext_resource type="Script" uid="uid://dg0vj5dqxb606" path="res://BrainVisualizer/UI/GenericElements/TextBoxes/TextInput.gd" id="3_wcnhn"]
[ext_resource type="PackedScene" uid="uid://b1lf2ayhmnh34" path="res://BrainVisualizer/UI/GenericElements/Scroll/ScrollGenomeObjectSelector/ScrollGenomeObjectSelector.tscn" id="3_xpgkm"]

[node name="WindowAddToRegion" type="VBoxContainer"]
offset_right = 632.0
offset_bottom = 455.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 0
script = ExtResource("1_mvyuv")

[node name="TitleBar" parent="." instance=ExtResource("2_qajk0")]
layout_mode = 2
title = "Select Target Brain Region"

[node name="WindowPanel" type="PanelContainer" parent="."]
layout_mode = 2

[node name="WindowMargin" type="MarginContainer" parent="WindowPanel"]
layout_mode = 2
theme_type_variation = &"MarginContainer_WindowBorder"

[node name="WindowInternals" type="VBoxContainer" parent="WindowPanel/WindowMargin"]
layout_mode = 2

[node name="TextInput" type="LineEdit" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
placeholder_text = "Filter..."
script = ExtResource("3_wcnhn")

[node name="gap" type="Control" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2

[node name="ScrollGenomeObjectSelector" parent="WindowPanel/WindowMargin/WindowInternals" instance=ExtResource("3_xpgkm")]
layout_mode = 2

[node name="Label" type="Label" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
text = "No Region Selected"

[node name="HBoxContainer" type="HBoxContainer" parent="WindowPanel/WindowMargin/WindowInternals"]
layout_mode = 2
alignment = 2

[node name="Add" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = " Create Brain Region "

[node name="Gap" type="Control" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Cancel" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
text = "Cancel"

[node name="Select" type="Button" parent="WindowPanel/WindowMargin/WindowInternals/HBoxContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme_type_variation = &"Button_big"
disabled = true
text = "Move"

[connection signal="text_changed" from="WindowPanel/WindowMargin/WindowInternals/TextInput" to="WindowPanel/WindowMargin/WindowInternals/ScrollGenomeObjectSelector" method="apply_name_filter"]
[connection signal="object_added" from="WindowPanel/WindowMargin/WindowInternals/ScrollGenomeObjectSelector" to="." method="_region_selected"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Add" to="." method="_add_region_pressed"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Cancel" to="." method="close_window"]
[connection signal="pressed" from="WindowPanel/WindowMargin/WindowInternals/HBoxContainer/Select" to="." method="_move_pressed"]
